<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/colorPrimaryDark"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="500dp"
                android:src="@drawable/logo"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />

            <LinearLayout
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:text="@string/servidor"
                        android:textColor="@color/colorAccent"
                        android:textSize="50dp" />

                    <EditText
                        android:id="@+id/editServidor"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="30dp"
                        android:layout_marginRight="30dp"
                        android:background="@color/colorAccent"
                        android:inputType="text"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="50dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/diretorio"
                        android:textColor="@color/colorAccent"
                        android:textSize="50dp" />

                    <EditText
                        android:id="@+id/editDiretorioVirtual"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="30dp"
                        android:layout_marginRight="30dp"
                        android:background="@color/colorAccent"
                        android:inputType="text"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="50dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/filial"
                        android:textColor="@color/colorAccent"
                        android:textSize="50dp" />

                    <EditText
                        android:id="@+id/editFilial"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="30dp"
                        android:layout_marginRight="30dp"
                        android:background="@color/colorAccent"
                        android:inputType="number"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="50dp" />

                    <Button
                        android:id="@+id/btSalvar"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:layout_gravity="center"
                        android:layout_marginLeft="29dp"
                        android:layout_marginRight="29dp"
                        android:layout_marginTop="30dp"
                        android:background="@color/colorPrimary"
                        android:text="@string/salvar"
                        android:textColor="@color/colorAccent"
                        android:textSize="30dp" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</ScrollView>
