<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical"
    tools:context="br.com.pdasolucoes.dashboardinventario.AutorizaoActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight=".5"
            android:src="@drawable/logo"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="50dp"
            android:layout_weight=".5">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/autorizacao"
                    android:textColor="@color/colorAccent"
                    android:textSize="50dp" />

                <EditText
                    android:id="@+id/editAuotorizacao"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:background="@color/colorAccent"
                    android:inputType="number"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="50dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btConfiguraoes"
                        android:layout_width="0dp"
                        android:layout_weight=".5"
                        android:layout_height="80dp"
                        android:layout_gravity="center"
                        android:layout_marginLeft="29dp"
                        android:layout_marginTop="10dp"
                        android:background="@color/colorPrimary"
                        android:text="@string/configuracoes"
                        android:textColor="@color/colorAccent"
                        android:textSize="30dp" />

                    <Button
                        android:id="@+id/btEntrar"
                        android:layout_width="0dp"
                        android:layout_weight=".5"
                        android:layout_height="80dp"
                        android:layout_gravity="center"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="29dp"
                        android:layout_marginTop="10dp"
                        android:background="@color/colorPrimary"
                        android:text="@string/entrar"
                        android:textColor="@color/colorAccent"
                        android:textSize="30dp" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
